# colcon-parallel-executor

./: .travis.yml  README.rst  appveyor.yml  setup.cfg  stdeb.cfg
.github/workflows/: ci.yaml
colcon_parallel_executor/event/: executor.py
colcon_parallel_executor/event_handler/: parallel_status.py
colcon_parallel_executor/executor/: parallel.py
test/: spell_check.words  test_executor_parallel.py  test_flake8.py  test_spell_check.py
