[metadata]
name = colcon-parallel-executor
version = attr: colcon_parallel_executor.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-parallel-executor/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-parallel-executor/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to process packages in parallel.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core>=0.3.15
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2
zip_safe = true

[tool:pytest]
filterwarnings =
    error
junit_suite_name = colcon-parallel-executor

[options.entry_points]
colcon_core.executor =
    parallel = colcon_parallel_executor.executor.parallel:ParallelExecutorExtension

[flake8]
import-order-style = google
